# donut

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  vcpkg.json
assets/shaders/: billboard_batch.vert  world.frag  world.vert  world_instanced.frag  world_instanced.vert
assets/windows/: donut.exe.manifest  donut.rc
cmake/: DownloadLibrary.cmake  FindOpenALSoft.cmake
dev/: Chunks.md  Commands.md
dev/codegen/: Chunks.md  cmd.json  p3d.json  run.bat
dev/p3dcppgen/: run.bat
shaders/: skin.frag  skin.vert
src/: AABB.h  AnimCamera.cpp  AnimCamera.h  BulletDebugDraw.cpp  BulletDebugDraw.h  CMakeLists.txt  Character.cpp  Character.h  CharacterController.cpp  CharacterController.h  Commands.cpp  Commands.generated.cpp  Commands.h  Entity.cpp  Entity.h  File.cpp  File.h  FreeCamera.cpp  FreeCamera.h  FrontendProject.cpp  FrontendProject.h  Game.cpp  Game.h  GameCommands.cpp  GameCommands.h  Input.cpp  Input.h  Level.cpp  Level.h  LineRenderer.cpp  LineRenderer.h  MemoryStream.cpp  MemoryStream.h  Mesh.cpp  Mesh.h  RADLoadObject.h  ResourceManager.cpp  ResourceManager.h  Skeleton.cpp  Skeleton.h  (+16 more)
src/Audio/: ALAudioDevice.cpp  ALAudioDevice.h  ALAudioManager.cpp  ALAudioManager.h  AudioManager.cpp  AudioManager.h  IAudioManager.h  Sound.h
src/Core/: BoundingBox.h  BoundingSphere.h  CRC32.h  File.cpp  File.h  FileSystem.h  FpsTimer.h  IFile.cpp  IFile.h  Log.h  MemoryStream.cpp  MemoryStream.h  Object.cpp  Object.h  Platform.h  Reference.h
src/Core/Math/: BoundingBox.h  BoundingSphere.h  Fwd.h  Math.cpp  Math.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector2Int.h  Vector3.cpp  Vector3.h  Vector3Int.cpp  Vector3Int.h  Vector4.cpp  Vector4.h
src/GL/: IndexBuffer.cpp  IndexBuffer.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  TextureBuffer.cpp  TextureBuffer.h  VertexBinding.cpp  VertexBinding.h  VertexBuffer.cpp  VertexBuffer.h
src/Input/: ButtonCodes.h  Input.cpp  Input.h
src/P3D/: AnimChannel.cpp  AnimChannel.h  Animation.cpp  Animation.h  AnimationGroup.cpp  AnimationGroup.h  AnimationGroupList.cpp  AnimationGroupList.h  BillboardQuad.cpp  BillboardQuad.h  BillboardQuadGroup.cpp  BillboardQuadGroup.h  CollisionObject.cpp  CollisionObject.h  CompositeDrawable.cpp  CompositeDrawable.h  CompressedQuaternionChannel.cpp  CompressedQuaternionChannel.h  FontGlyphs.cpp  FontGlyphs.h  InstanceList.cpp  InstanceList.h  InstancedStaticPhys.cpp  InstancedStaticPhys.h  Intersect.cpp  Intersect.h  Mesh.cpp  Mesh.h  P3D.generated.cpp  P3D.generated.h  P3DChunk.cpp  P3DChunk.h  P3DFile.cpp  P3DFile.h  PolySkin.cpp  PolySkin.h  PrimGroup.cpp  PrimGroup.h  QuaternionChannel.cpp  QuaternionChannel.h  (+29 more)
src/P3D/Loaders/: PolySkinLoader.cpp  PolySkinLoader.h  PrimGroupLoader.cpp  PrimGroupLoader.h  SkeletonJointLoader.cpp  SkeletonJointLoader.h  SkeletonLoader.cpp  SkeletonLoader.h  TextureLoader.cpp  TextureLoader.h
src/Physics/: BulletCast.h  BulletDebugDraw.cpp  BulletDebugDraw.h  BulletFenceShape.cpp  BulletFenceShape.h  WorldPhysics.cpp  WorldPhysics.h
src/Pure3D/: Camera.h  Chunk.cpp  Chunk.h  ChunkFile.cpp  ChunkFile.h  Entity.h  Inventory.cpp  Inventory.h  LoadManager.cpp  LoadManager.h  LoadObject.h  Loader.h  Name.cpp  Name.h  P3DFileHandler.cpp  P3DFileHandler.h  Pure3D.cpp  Pure3D.h  ResourceStore.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Types.h
src/Pure3D/Chunks/: Mesh.h
src/Pure3D/Loaders/: CameraLoader.cpp  CameraLoader.h  Loader.h  SpriteLoader.cpp  SpriteLoader.h  TextureLoader.cpp  TextureLoader.h
src/RAD/: FileLoader.h  LoadManager.cpp  LoadManager.h
src/RAD/FileHandler/: P3DFileHandler.h
src/RCL/: RCFFile.cpp  RCFFile.h  RSDFile.cpp  RSDFile.h
src/Render/: BillboardBatch.cpp  BillboardBatch.h  CompositeDrawable.cpp  CompositeDrawable.h  CompositeModel.cpp  CompositeModel.h  Font.cpp  Font.h  LineRenderer.cpp  LineRenderer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  SkinAnimation.cpp  SkinAnimation.h  SkinModel.cpp  SkinModel.h  SpriteBatch.cpp  SpriteBatch.h  StaticEntity.cpp  StaticEntity.h  Texture.cpp  Texture.h  WorldSphere.cpp  WorldSphere.h
src/Render/OpenGL/: FrameBuffer.cpp  FrameBuffer.h  GLTexture2D.cpp  GLTexture2D.h  IndexBuffer.cpp  IndexBuffer.h  RenderBuffer.cpp  RenderBuffer.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  TextureBuffer.cpp  TextureBuffer.h  VertexBinding.cpp  VertexBinding.h  VertexBuffer.cpp  VertexBuffer.h
src/Render/OpenGL/glad/: gl.c  gl.h  glad.c  glad.h  khrplatform.h
src/Render/imgui/: imconfig.h  imgui_impl_opengl3.cpp  imgui_markdown.h  imgui_user.cpp  imgui_user.h
src/Scripting/: Commands.generated.cpp  Commands.h  GameCommands.cpp  GameCommands.h
